Added export function

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -150,6 +150,27 @@ See https://github.com/adobe-type-tools/cmap-resources
 
             <div class="horizontalToolbarSeparator"></div>
 
+            <button id="exportExcel" class="secondaryToolbarButton exportExcel" title="Export to Excel" tabindex="69" data-l10n-id="export_excel">
+              <span data-l10n-id="export_excel_label">Export to Excel</span>
+            </button>
+            <button id="exportWord" class="secondaryToolbarButton exportWord" title="Export to Word" tabindex="70" data-l10n-id="export_word">
+              <span data-l10n-id="export_word_label">Export to Word</span>
+            </button>
+            <button id="exportCsv" class="secondaryToolbarButton exportCsv" title="Export to CSV" tabindex="71" data-l10n-id="export_csv">
+              <span data-l10n-id="export_csv_label">Export to CSV</span>
+            </button>
+            <button id="exportXml" class="secondaryToolbarButton exportXml" title="Export to XML" tabindex="72" data-l10n-id="export_xml">
+              <span data-l10n-id="export_xml_label">Export to XML</span>
+            </button>
+            <button id="exportHTML" class="secondaryToolbarButton exportHTML" title="Export to HTML" tabindex="73" data-l10n-id="export_html">
+              <span data-l10n-id="export_html_label">Export to HTML</span>
+            </button>
+            <button id="exportTIFF" class="secondaryToolbarButton exportTIFF" title="Export to TIFF" tabindex="74" data-l10n-id="export_tiff">
+              <span data-l10n-id="export_tiff_label">Export to TIFF</span>
+            </button>
+
+            <div class="horizontalToolbarSeparator"></div>
+
             <button id="pageRotateCw" class="secondaryToolbarButton rotateCw" title="Rotate Clockwise" tabindex="58" data-l10n-id="page_rotate_cw">
               <span data-l10n-id="page_rotate_cw_label">Rotate Clockwise</span>
             </button>
