--- a/web/viewer.html
+++ b/web/viewer.html
@@ -20,6 +20,11 @@ Adobe CMap resources are covered by their own copyright but the same license:
 
 See https://github.com/adobe-type-tools/cmap-resources
 -->
+<!--
+Copyright 2021 Microsoft
+This file has been modified by Microsoft to add support for document
+presentation in Microsoft Dynamics 365 - Finance & Operations web client.
+-->
 <html dir="ltr" mozdisallowselectionprint>
   <head>
     <meta charset="utf-8">
